--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-plaid-link": "^4.0.1",
     "recharts": "^2.15.3",
     "tailwind-merge": "^3.3.0"
   },
